--- a/templates/students/dashboard.html
+++ b/templates/students/dashboard.html
@@ -355,7 +355,7 @@
             <div class="nav-links">
                 <a href="#">Dashboard</a>
                 <a href="#">Career Paths</a>
-                <a href="#">Assessments</a>
+                <a href="{% url 'assessment' %}">Assessments</a>
                 <a href="#">Resources</a>
             </div>
             
